More menu refinements, color tuning, fix "no overflow" breaks settings access...
Add logic for disabling overflow menu, and a settings button when
disabled.  Fixes mescon/muximux#37.
Adjust menu element positions in code to float items to right - this
will help with a "mobile override" option to come.
Add missing code for "new item" in menu for color picker.
Refine settings UI more for continuity between mobile and desktop views.

--- a/css/style.css
+++ b/css/style.css
@@ -112,30 +112,26 @@ Main components
     float: left;
 }
 
-.cd-tabs-navigation li:last-child {
-    float: right;
-    right: 0px;
-}
-
-.cd-tabs-navigation a, #reload {
+.cd-tabs-navigation a, #reload, #settings {
     position: relative;
     display: block;
-    height: 160px;
-    width: 30px;
+    height: 35px;
+    width: 35px;
+    padding-top: 10px;
     text-align: center;
     font-size: 1.6rem;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-weight: 700;
     color: #818181;
-    padding-top: 32px;
+    
 }
 
 #reload, .cd-tabs-navigation li {
     cursor: pointer;
 }
 
-.no-touch .cd-tabs-navigation a:hover, #reload:hover {
+.no-touch .cd-tabs-navigation a:hover, #reload:hover, #settings:hover {
     color: #f1f3f2; /* Hover text colour */
     background-color: rgba(233, 230, 202, 0.3);
 }
@@ -153,7 +149,7 @@ Main components
         box-shadow: inset 0 -2px 3px rgba(203, 196, 130, 0.06);
     }
 
-    .cd-tabs-navigation a, #reload {
+    .cd-tabs-navigation a:not(#reload) {
         height: 40px;
         line-height: 40px;
         width: 100%;
@@ -424,7 +420,9 @@ input[type='button']:hover {
 
 .modal-dialog {
     width: 90%;
-	max-width: 550px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 550px;
 }
 
 .modal-body {
